--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>My test page</title>
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
+  </head>
+  <body>
+    <h1>ICS3U Portfolio</h1>
+    <h2>Alexander Galstyan</h2>
+    <img src="" alt="">
 
+    <p>Top 10 Modules Worked on This Semester:</p>
+
+    <ul>
+      <li>Creative Coding Challenge</li>
+      <li>Microbit</li>
+      <li>Advanced JS: Games and Visuallisations</li>
+      <li>Intro to JS</li>
+      <li>Intro to Html</li>
+      <li>Algorithms + Cryptography + Information Theory</li>
+      <li>Computer Programming + Digital Information</li>
+      <li>Simulations + Algorithms + Data Analysis</li>
+      <li>Gamejam</li>
+      <li>Github/Markdown</li>
+    </ul>
+
+    <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
+
+    <p>Some stuff I <a href="ics3u-portfolio/portfolio.html">did</a> within the duration of the course.</p>
+  </body>
+</html>
