--- a/portfolio.html
+++ b/portfolio.html
@@ -25,13 +25,19 @@
       <br>Pet code made in the Makecode Block editor for the microbit assignement. We made a pet that changes its' mood based on different inputs. It has a different mood for each
   </p></li>
       <li>
+        <p>p5.js clock</p>
         <iframe height="400px" width="400px" src="https://editor.p5js.org/chewsty/full/P9On0zshMj"></iframe>
         <br>Creative coding challenge coded along with one of the groups. I made some slight adjustments and some parts of the code look different from the original but it works.
       </li>
       <li>
+        <p>p5.js water ripple simulation</p>
         <iframe height="400px" width="400px" src="https://editor.p5js.org/chewsty/full/QLdovQvf6"></iframe>
         <br> Another one of the challenges done along with another group. This one was fun to make and it looks cool.
       </li>
+      <li>Javascript game made for GameJam
+      <br>Though a lot of struggle we managed to put together something that runs. It was not too fun to make, we had to give up on a lot of ideas. Also school wifi restrictions played a part.
+      <br><a href="https://github.com/chewsty/gamejam">Github Repo</a></li>
+      <li></li>
     </ul>
   </body>
   
