--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,8 @@
       <li>Javascript game made for GameJam
       <br>Though a lot of struggle we managed to put together something that runs. It was not too fun to make, we had to give up on a lot of ideas. Also school wifi restrictions played a part.
       <br><a href="https://github.com/chewsty/gamejam">Github Repo</a></li>
-      <li></li>
+      <li><a href="https://editor.p5js.org/chewsty/sketches/boFn1hH-0">p5.js img into ascii</a>
+      <br>And another one of the challenges, this one was probably the most complicated one out of the ones I completed. It is, in some cases a useful tool.</li>
     </ul>
   </body>
   
